// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox component CheckBox checked snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-borderColor-t1myqv r-borderRadius-z2wwpe r-borderWidth-rs99b7 r-height-1472mwg r-width-lrsllp r-alignItems-1awozwy r-backgroundColor-1w8984d r-justifyContent-1777fci"
  dir={null}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "alldone",
          "fontSize": "16px",
          "opacity": 1,
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`CheckBox component CheckBox snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderColor-t1myqv r-borderRadius-z2wwpe r-borderWidth-rs99b7 r-height-1472mwg r-width-lrsllp"
  dir={null}
/>
`;

exports[`CheckBox component CheckBox subtask checked snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-borderColor-t1myqv r-borderRadius-z2wwpe r-borderWidth-rs99b7 r-alignItems-1awozwy r-backgroundColor-1w8984d r-justifyContent-1777fci r-height-z80fyv r-width-19wmn03"
  dir={null}
>
  <div
    className="css-view-g5y9jx"
    dir={null}
  >
    <div
      className="css-text-146c3p1"
      dir="auto"
      style={
        Object {
          "color": "rgba(255,255,255,1.00)",
          "fontFamily": "alldone",
          "fontSize": "16px",
          "opacity": 1,
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`CheckBox component CheckBox subtask snapshot test should render correctly 1`] = `
<div
  className="css-view-g5y9jx r-backgroundColor-14lw9ot r-borderColor-t1myqv r-borderRadius-z2wwpe r-borderWidth-rs99b7 r-height-z80fyv r-width-19wmn03"
  dir={null}
/>
`;
